--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Primary Meta Tags -->
     <title>Я web-розробник з міста Київ</title>
-    <meta name="title" content="Я web-разработчик из города Киев">
-    <meta name="description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+    <meta name="title" content="Я web-разробник з міста Київ">
+    <meta name="description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://matveyozi.github.io/">
-    <meta property="og:title" content="Я web-разработчик из города Киев">
-    <meta property="og:description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+    <meta property="og:title" content="Я web-разробник з міста Київ">
+    <meta property="og:description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
     <meta property="og:image"
         content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://matveyozi.github.io/">
-    <meta property="twitter:title" content="Я web-разработчик из города Киев">
+    <meta property="twitter:title" content="Я web-разробник з міста Київ">
     <meta property="twitter:description"
-        content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+        content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
     <meta property="twitter:image"
         content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
@@ -51,7 +51,8 @@
 
 <body>
     <aside class="sidepanel">
-        <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="sidepanel__link"><img src="icons/social/linkedin.png" alt="linkedin"></a>
+        <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="sidepanel__link"><img
+                src="icons/social/linkedin.png" alt="linkedin"></a>
         <a href="" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
         <a href="" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
 
@@ -80,7 +81,8 @@
                 </ul>
             </nav>
             <div class="menu__social">
-                <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/"><img src="icons/social/linkedin.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/"><img src="icons/social/linkedin.png"
+                        alt=""></a>
                 <a href="https://github.com/matveyozi"><svg width="20" height="19" viewBox="0 0 20 19" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -138,7 +140,7 @@
                 </div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">Про мене</h2>
-                    <div class="title title_fz36 about__subtitle">Мене зовуть Матвій</div>
+                    <div class="title title_fz36 about__subtitle">Я Матвій!</div>
                     <div class="divider"></div>
                     <p class="about__text">Привіт!
                     </p>
@@ -153,7 +155,8 @@
                                 Web-разработка
                             </div>
                             <div class="about__skills-text">
-                                Вмію верстати сайт за макетом. Вставляти різні анімації, галереї, використовуючи різні бібліотеки. Є знання Pixel Perfect верстки.
+                                Вмію верстати сайт за макетом. Вставляти різні анімації, галереї, використовуючи різні
+                                бібліотеки. Є знання Pixel Perfect верстки.
                             </div>
                         </div>
                     </div>
@@ -376,7 +379,7 @@
                         <span></span>
                     </div>
                 </div>
-               <!--  <div class="skills__lvl-item">
+                <!--  <div class="skills__lvl-item">
                     <div class="skills__lvl-up">
                         <div class="title title_fz14 skills__lvl-title">Створення дизайну</div>
                         <div class="skills__lvl-num">90%</div>
@@ -398,9 +401,6 @@
                 <a href="/uber" class="portfolio__item">
                     <img src="img/works/uber.jpg" alt="uber">
                 </a>
-                <a href="/pulse" class="portfolio__item">
-                    <img src="img/works/pulse.jpg" alt="pulse">
-                </a>
                 <a href="/gazprom" class="portfolio__item">
                     <img src="img/works/bread.jpg" alt="bread">
                 </a>
@@ -411,13 +411,16 @@
                     <img src="https://images.unsplash.com/photo-1518172264979-28d0d5a2a9ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
                         alt="ipad">
                 </a>
+                <a href="/pulse" class="portfolio__item ">
+                    <img src="img/works/pulse.jpg" alt="ipad">
+                </a>
+
                 <a href="/wordpress" class="portfolio__item horizontal">
                     <img src="img/works/mac.jpg" alt="mac">
                 </a>
                 <a href="/flappyBird" class="portfolio__item">
                     <img src="img/works/flappy.png" alt="mac">
                 </a>
-
             </div>
         </div>
     </section>
@@ -471,8 +474,7 @@
                     <div class="divider"></div>
                     <div class="title title_fz14 contacts__text">Будь-яким зручним для вас способом:</div>
                     <div class="contacts__social">
-                        <a href="#" class="contacts__link"><img src="icons/social/linkedin.png"
-                                alt=""></a>
+                        <a href="#" class="contacts__link"><img src="icons/social/linkedin.png" alt=""></a>
                         <a href="#" class="contacts__link"><img src="icons/social/telegram.svg" alt=""></a>
                         <a href="#" class="contacts__link"><img src="icons/social/instagram.svg" alt=""></a>
                     </div>
