--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Primary Meta Tags -->
-    <title>Я web-розробник з міста Київ</title>
-    <meta name="title" content="Я web-разробник з міста Київ">
-    <meta name="description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
+<title>Я web-розробник з міста Київ</title>
+<meta name="title" content="Я web-розробник з міста Київ">
+<meta name="description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://matveyozi.github.io/">
-    <meta property="og:title" content="Я web-разробник з міста Київ">
-    <meta property="og:description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
-    <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://matveyozi.github.io/">
+<meta property="og:title" content="Я web-розробник з міста Київ">
+<meta property="og:description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://matveyozi.github.io/">
-    <meta property="twitter:title" content="Я web-разробник з міста Київ">
-    <meta property="twitter:description"
-        content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
-    <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://matveyozi.github.io/">
+<meta property="twitter:title" content="Я web-розробник з міста Київ">
+<meta property="twitter:description" content="Тут ви зможете ознайомитися з моїми роботами та дізнатися більше про мене">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <!-- Favicon  -->
     <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon//apple-icon-57x57.png">
@@ -114,7 +111,7 @@
         </div>
         <div class="container">
             <div class="title title_fz16 promo__subtitle">Моє ім'я Матвій Антіпін</div>
-            <h1 class="title title_fz48 promo__title">Я web-разробник з міста Київ</h1>
+            <h1 class="title title_fz48 promo__title">Я web-розробник з міста Київ</h1>
             <div class="promo__btns">
                 <a href="#portfolio" class="promo__link btn">Портфоліо</a>
                 <a href="#about" class="promo__link btn">Про мене</a>
@@ -152,7 +149,7 @@
                         </div>
                         <div>
                             <div class="title title_fz14">
-                                Web-разработка
+                                Web-розработка
                             </div>
                             <div class="about__skills-text">
                                 Вмію верстати сайт за макетом. Вставляти різні анімації, галереї, використовуючи різні
@@ -240,13 +237,13 @@
                                     <div class="resume__item-icon">
                                         <img src="icons/experience/developer.svg" alt="">
                                     </div>
-                                    <h4 class="title title_fz14">Оператор компрессорного приладу</h4>
+                                    <h4 class="title title_fz14">Оператор компресорного приладу</h4>
                                     <div class="resume__item-location">LLC GT Logistics | Харків (Чер 2019 - Лют 2022)
                                     </div>
                                 </div>
                                 <div class="resume__item-body">
                                     Прийом та видача зрідженого газу та документів на нього. Слідкування за роботою та
-                                    станом компрессора.
+                                    станом компресора.
                                 </div>
                             </div>
                             <div class="resume__item">
@@ -404,7 +401,7 @@
                 <a href="/gazprom" class="portfolio__item">
                     <img src="img/works/bread.jpg" alt="bread">
                 </a>
-                <a href="/mntm" class="portfolio__item vertical">
+                <a href="/wordpress" class="portfolio__item vertical">
                     <img src="img/works/plans.jpg" alt="plans">
                 </a>
                 <a href="/slide" class="portfolio__item ">
@@ -415,7 +412,7 @@
                     <img src="img/works/pulse.jpg" alt="ipad">
                 </a>
 
-                <a href="/wordpress" class="portfolio__item horizontal">
+                <a href="/mntm" class="portfolio__item horizontal">
                     <img src="img/works/mac.jpg" alt="mac">
                 </a>
                 <a href="/flappyBird" class="portfolio__item">
@@ -474,12 +471,12 @@
                     <div class="divider"></div>
                     <div class="title title_fz14 contacts__text">Будь-яким зручним для вас способом:</div>
                     <div class="contacts__social">
-                        <a href="#" class="contacts__link"><img src="icons/social/linkedin.png" alt=""></a>
-                        <a href="#" class="contacts__link"><img src="icons/social/telegram.svg" alt=""></a>
-                        <a href="#" class="contacts__link"><img src="icons/social/instagram.svg" alt=""></a>
+                        <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="contacts__link"><img src="icons/social/linkedin.png" alt=""></a>
+                        <a href="https://telegram.me/mateus_beus" class="contacts__link"><img src="icons/social/telegram.svg" alt=""></a>
+                        <a href="https://www.instagram.com/mateus_beus/" class="contacts__link"><img src="icons/social/instagram.svg" alt=""></a>
                     </div>
                     <div class="title title_fz14 contacts__text">
-                        Или оставьте ваши данные и я сама вам напишу:
+                        Або залиште ваші дані та я сам вам напишу:
                     </div>
 
                     <form action="#" class="contacts__form">
