--- a/src/index.html
+++ b/src/index.html
@@ -408,7 +408,7 @@
                     <img src="https://images.unsplash.com/photo-1518172264979-28d0d5a2a9ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
                         alt="ipad">
                 </a>
-                <a href="/pulse" class="portfolio__item ">
+                <a href="/puls" class="portfolio__item ">
                     <img src="img/works/pulse.jpg" alt="ipad">
                 </a>
 
@@ -417,6 +417,9 @@
                 </a>
                 <a href="/flappyBird" class="portfolio__item">
                     <img src="img/works/flappy.png" alt="mac">
+                </a>
+                <a href="/blog" class="portfolio__item">
+                    <img src="img/works/pult.png" alt="pult">
                 </a>
             </div>
         </div>
