--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,10 @@
 
 <body>
     <aside class="sidepanel">
-        <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="sidepanel__link"><img
+        <a rel="noopener nofollow noreferrer" href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="sidepanel__link"><img
                 src="icons/social/linkedin.png" alt="linkedin"></a>
-        <a href="" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a rel="noopener nofollow noreferrer" href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+        <a rel="noopener nofollow noreferrer" href="https://github.com/matveyozi" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
 
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text">
@@ -78,15 +78,15 @@
                 </ul>
             </nav>
             <div class="menu__social">
-                <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/"><img src="icons/social/linkedin.png"
+                <a rel="noopener nofollow noreferrer" href="https://www.linkedin.com/in/matviy-antipin-91b666237/"><img src="icons/social/linkedin.png"
                         alt=""></a>
-                <a href="https://github.com/matveyozi"><svg width="20" height="19" viewBox="0 0 20 19" fill="none"
+                <a rel="noopener nofollow noreferrer" href="https://github.com/matveyozi"><svg width="20" height="19" viewBox="0 0 20 19" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 0C4.475 0 0 4.36167 0 9.74107C0 14.0457 2.865 17.6962 6.8375 18.9832C7.3375 19.0749 7.52083 18.7734 7.52083 18.5148C7.52083 18.2835 7.5125 17.6706 7.50833 16.8585C4.72667 17.4459 4.14 15.5517 4.14 15.5517C3.685 14.4274 3.0275 14.1267 3.0275 14.1267C2.12167 13.5228 3.0975 13.5352 3.0975 13.5352C4.10167 13.603 4.62917 14.5389 4.62917 14.5389C5.52083 16.0283 6.97 15.5979 7.54167 15.3493C7.63167 14.719 7.88917 14.2903 8.175 14.0466C5.95417 13.8029 3.62 12.9652 3.62 9.23304C3.62 8.16988 4.0075 7.30085 4.64917 6.61934C4.53667 6.37317 4.19917 5.3827 4.73667 4.04116C4.73667 4.04116 5.57417 3.78012 7.48667 5.03988C8.28667 4.82345 9.13667 4.71606 9.98667 4.7111C10.8367 4.71606 11.6867 4.82345 12.4867 5.03988C14.3867 3.78012 15.2242 4.04116 15.2242 4.04116C15.7617 5.3827 15.4242 6.37317 15.3242 6.61934C15.9617 7.30085 16.3492 8.16988 16.3492 9.23304C16.3492 12.9752 14.0117 13.7987 11.7867 14.0383C12.1367 14.3307 12.4617 14.928 12.4617 15.8408C12.4617 17.1444 12.4492 18.1918 12.4492 18.5082C12.4492 18.7635 12.6242 19.0683 13.1367 18.9708C17.1375 17.692 20 14.0391 20 9.74107C20 4.36167 15.5225 0 10 0Z"
                             fill="#212121" />
                     </svg></a>
-                <a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                <a rel="noopener nofollow noreferrer" href="#" ><svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M13.7495 0L6.24951 0C2.79826 0 -0.000488281 2.79875 -0.000488281 6.25L-0.000488281 13.75C-0.000488281 17.2013 2.79826 20 6.24951 20L13.7495 20C17.2008 20 19.9995 17.2013 19.9995 13.75L19.9995 6.25C19.9995 2.79875 17.2008 0 13.7495 0ZM18.1245 13.75C18.1245 16.1625 16.162 18.125 13.7495 18.125L6.24951 18.125C3.83701 18.125 1.87451 16.1625 1.87451 13.75L1.87451 6.25C1.87451 3.8375 3.83701 1.875 6.24951 1.875L13.7495 1.875C16.162 1.875 18.1245 3.8375 18.1245 6.25L18.1245 13.75Z"
@@ -395,31 +395,34 @@
             <div class="title title_fz36 title__section-subtitle">Мої роботи</div>
             <div class="divider"></div>
             <div class="portfolio__wrapper">
-                <a href="/uber" class="portfolio__item">
+                <a target="_blank" href="/uber" class="portfolio__item">
                     <img src="img/works/uber.jpg" alt="uber">
                 </a>
-                <a href="/gazprom" class="portfolio__item">
+                <a target="_blank" href="/gazprom" class="portfolio__item">
                     <img src="img/works/bread.jpg" alt="bread">
                 </a>
-                <a href="/wordpress" class="portfolio__item vertical">
+                <a target="_blank" href="/wordpress" class="portfolio__item vertical">
                     <img src="img/works/plans.jpg" alt="plans">
                 </a>
-                <a href="/slide" class="portfolio__item ">
+                <a target="_blank" href="/slide" class="portfolio__item ">
                     <img src="https://images.unsplash.com/photo-1518172264979-28d0d5a2a9ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
                         alt="ipad">
                 </a>
-                <a href="/puls" class="portfolio__item ">
+                <a target="_blank" href="/puls" class="portfolio__item ">
                     <img src="img/works/pulse.jpg" alt="ipad">
                 </a>
 
-                <a href="/mntm" class="portfolio__item horizontal">
+                <a target="_blank" href="/mntm" class="portfolio__item horizontal">
                     <img src="img/works/mac.jpg" alt="mac">
                 </a>
-                <a href="/flappyBird" class="portfolio__item">
+                <a target="_blank" href="/flappyBird" class="portfolio__item">
                     <img src="img/works/flappy.png" alt="mac">
                 </a>
-                <a href="/blog" class="portfolio__item">
+                <a target="_blank" href="/blog" class="portfolio__item">
                     <img src="img/works/pult.png" alt="pult">
+                </a>
+                <a rel="noopener noreferal nofollow" target="_blank" href="https://matveyozi.github.io/icream-Teamproject/" class="portfolio__item">
+                    <img src="img/works/icecream.webp" alt="icecream">
                 </a>
             </div>
         </div>
@@ -474,9 +477,9 @@
                     <div class="divider"></div>
                     <div class="title title_fz14 contacts__text">Будь-яким зручним для вас способом:</div>
                     <div class="contacts__social">
-                        <a href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="contacts__link"><img src="icons/social/linkedin.png" alt=""></a>
-                        <a href="https://telegram.me/mateus_beus" class="contacts__link"><img src="icons/social/telegram.svg" alt=""></a>
-                        <a href="https://www.instagram.com/mateus_beus/" class="contacts__link"><img src="icons/social/instagram.svg" alt=""></a>
+                        <a rel="noopener nofollow noreferrer" href="https://www.linkedin.com/in/matviy-antipin-91b666237/" class="contacts__link"><img src="icons/social/linkedin.png" alt=""></a>
+                        <a rel="noopener nofollow noreferrer" href="https://telegram.me/mateus_beus"  class="contacts__link"><img src="icons/social/telegram.svg" alt=""></a>
+                        <a rel="noopener nofollow noreferrer" href="https://www.instagram.com/mateus_beus/" class="contacts__link"><img src="icons/social/instagram.svg" alt=""></a>
                     </div>
                     <div class="title title_fz14 contacts__text">
                         Або залиште ваші дані та я сам вам напишу:
